test/libsolidity/syntaxTests/constructor/constructor_without_implementation.sol
contract C {
	constructor();
}
// ----
// TypeError: (14-35): Constructor must be implemented if declared.
